chore: Update Python version to 3.12 and standardize GCS bucket name

--- a/app.yaml
+++ b/app.yaml
@@ -20,6 +20,7 @@ health_check:
 # Environment variables
 env_variables:
   PORT: 8080
+  DB_BUCKET_NAME: tak-explorer-db
 
 # Network settings
 network:
