--- a/app.yaml
+++ b/app.yaml
@@ -1,7 +1,7 @@
 runtime: python311
 
-# App Engine configuration
-instance_class: F2  # 2GB memory, suitable for database processing
+# F4 instance class: 1GB memory (F2 is 512MB, not enough for ~290MB database)
+instance_class: F4
 
 # Automatic scaling
 automatic_scaling:
@@ -9,25 +9,7 @@ automatic_scaling:
   max_instances: 2
   target_cpu_utilization: 0.65
 
-# Health check
-health_check:
-  enable_health_check: True
-  check_interval_sec: 5
-  timeout_sec: 4
-  unhealthy_threshold: 2
-  healthy_threshold: 2
-
 # Environment variables
 env_variables:
   PORT: 8080
   DB_BUCKET_NAME: tak-explorer-db
-
-# Network settings
-network:
-  forwarded_ports: [8080]
-
-# Resource limits
-resources:
-  cpu: 1
-  memory_gb: 2
-  disk_size_gb: 10
