chore: Migrate from App Engine to Cloud Run with lazy database loading
- Add Cloud Run deployment configuration with Dockerfile and comprehensive deployment guide
- Implement lazy loading for databases - download from Cloud Storage only on first request
- Reduce cold start time from minutes to seconds by deferring database downloads
- Disable App Engine automatic scaling (max_instances: 0) to avoid charges
- Add ensure_openings_db_exists() and ensure_playtak_db_exists() for on-demand downloads

--- a/app.yaml
+++ b/app.yaml
@@ -3,10 +3,10 @@ runtime: python311
 # F4 instance class: 1GB memory (F2 is 512MB, not enough for ~290MB database)
 instance_class: F4
 
-# Automatic scaling
+# Automatic scaling - disabled (using Cloud Run instead)
 automatic_scaling:
   min_instances: 0
-  max_instances: 2
+  max_instances: 0
   target_cpu_utilization: 0.65
 
 # Environment variables
